News Version 1.0 Final
======================

- First public release of the module.

Version 1.01
------------

* Fixed undefined variable: news_tag_name in file /modules/news/article.php line 367 (sato-san)
* Initialise $sprocketsModule variable to avoid warning in article.php (sato-san).

Version 1.1
-----------

* Updated to meet ICMS 1.3.x specification. No longer compatible with 1.2.x.
* SEO friendly URLs for articles.

Version 1.11
------------

* Fix slow index page load when gzip enabled.

Version 1.12
------------

* Revert to theme changer block bugfix.

Version 1.13 Final (15/1/2013)
------------------------------

* Minor patches to maintain compatibility with Sprockets 2.0.
* Improve notification handling / code clean up.

Version 1.14 Final (22/1/2013)
------------------------------

* Fix incorrect data type assignment ('string' should have been 'text') in module preferences.

Version 1.15 Final
------------------

* Improve efficiency of search function.

Version 1.16 Beta
-----------------
* Remove some paragraph tags from description field in template (these should be entered in the 
description itself).