@@ -45,3 +45,4 @@ Version 1.16 Beta
 -----------------
 * Remove some paragraph tags from description field in template (these should be entered in the 
 description itself).
+* Fix bug in search function that was crashing profile views
